[package]
name = "async_keyboard"
version = "0.1.0"
authors = ["Ketaki Joshi <ketaki.joshi@yale.edu>, Caihua Li <caihua.li@yale.edu>"]
build = "../../build.rs"
edition = "2018"

[dependencies]
getopts = "0.2.21"
spin = "0.4.10"
bare-io = { version = "0.2.1", features = [ "alloc" ] }

[dependencies.task]
path = "../../kernel/task"

[dependencies.path]
path = "../../kernel/path"

[dependencies.fs_node]
path = "../../kernel/fs_node"

[dependencies.keycodes_ascii]
path = "../../libs/keycodes_ascii"

[dependencies.libterm]
path = "../../kernel/libterm"

[dependencies.app_io]
path = "../app_io"

[dependencies.stdio]
path = "../../libs/stdio"

[dependencies.log]
version = "0.4.8"

[dependencies.terminal_print]
path = "../../kernel/terminal_print"

[dependencies.task_async]
path = "../../kernel/task_async"

[dependencies.futures-util]
version = "0.3.4"
default-features = false
features = ["alloc"]

[lib]
crate-type = ["rlib"]
