[package]
name = "task_async"
version = "0.1.0"
authors = ["Ketaki Joshi <ketaki.joshi@yale.edu>, Caihua Li <caihua.li@yale.edu"]
description = "contains the structs VFSDirectory and VFSFile, which are the most basic, generic implementers of the traits Directory and File, respectively. "


[dependencies]
spin = "0.4.5"
x86_64 = { path = "../../libs/x86_64" } # currently using our local copy, forked from Phil Opp's crate

[dependencies.log]
version = "0.4.8"

[dependencies.fs_node]
path = "../fs_node"

[dependencies.memory]
path = "../memory"

[dependencies.path]
path = "../path"

#[dependencies.task]
#path = "../task"

[dependencies.root]
path = "../root"

[lib]
crate-type = ["rlib"]
